* po/POTFILES.in: Regenerate.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -14,6 +14,7 @@
 ./grub-core/bus/usb/serial/common.c
 ./grub-core/bus/usb/serial/ftdi.c
 ./grub-core/bus/usb/serial/pl2303.c
+./grub-core/bus/usb/serial/usbdebug_late.c
 ./grub-core/bus/usb/uhci.c
 ./grub-core/bus/usb/usb.c
 ./grub-core/bus/usb/usbhub.c
@@ -23,6 +24,7 @@
 ./grub-core/commands/arc/lsdev.c
 ./grub-core/commands/blocklist.c
 ./grub-core/commands/boot.c
+./grub-core/commands/boottime.c
 ./grub-core/commands/cacheinfo.c
 ./grub-core/commands/cat.c
 ./grub-core/commands/cmp.c
@@ -30,6 +32,7 @@
 ./grub-core/commands/date.c
 ./grub-core/commands/echo.c
 ./grub-core/commands/efi/acpi.c
+./grub-core/commands/efi/efifwsetup.c
 ./grub-core/commands/efi/fixvideo.c
 ./grub-core/commands/efi/loadbios.c
 ./grub-core/commands/efi/lsefi.c
@@ -43,7 +46,10 @@
 ./grub-core/commands/hdparm.c
 ./grub-core/commands/help.c
 ./grub-core/commands/hexdump.c
+./grub-core/commands/i386/cmosdump.c
 ./grub-core/commands/i386/cmostest.c
+./grub-core/commands/i386/coreboot/cbls.c
+./grub-core/commands/i386/coreboot/cb_timestamps.c
 ./grub-core/commands/i386/cpuid.c
 ./grub-core/commands/i386/pc/acpi.c
 ./grub-core/commands/i386/pc/drivemap.c
@@ -68,6 +74,7 @@
 ./grub-core/commands/parttool.c
 ./grub-core/commands/password.c
 ./grub-core/commands/password_pbkdf2.c
+./grub-core/commands/pcidump.c
 ./grub-core/commands/probe.c
 ./grub-core/commands/read.c
 ./grub-core/commands/reboot.c
@@ -85,6 +92,7 @@
 ./grub-core/commands/time.c
 ./grub-core/commands/true.c
 ./grub-core/commands/usbtest.c
+./grub-core/commands/verify.c
 ./grub-core/commands/videoinfo.c
 ./grub-core/commands/videotest.c
 ./grub-core/commands/wildcard.c
@@ -167,6 +175,7 @@
 ./grub-core/fs/tar.c
 ./grub-core/fs/udf.c
 ./grub-core/fs/ufs2.c
+./grub-core/fs/ufs_be.c
 ./grub-core/fs/ufs.c
 ./grub-core/fs/xfs.c
 ./grub-core/fs/zfs/zfs.c
@@ -304,6 +313,7 @@
 ./grub-core/kern/efi/init.c
 ./grub-core/kern/efi/mm.c
 ./grub-core/kern/elf.c
+./grub-core/kern/elfXX.c
 ./grub-core/kern/emu/argp_common.c
 ./grub-core/kern/emu/cache.c
 ./grub-core/kern/emu/full.c
@@ -327,7 +337,6 @@
 ./grub-core/kern/i386/multiboot_mmap.c
 ./grub-core/kern/i386/pc/init.c
 ./grub-core/kern/i386/pc/mmap.c
-./grub-core/kern/i386/pit.c
 ./grub-core/kern/i386/qemu/mmap.c
 ./grub-core/kern/i386/tsc.c
 ./grub-core/kern/ia64/dl.c
@@ -420,10 +429,71 @@
 ./grub-core/lib/libgcrypt/cipher/sha1.c
 ./grub-core/lib/libgcrypt/cipher/sha256.c
 ./grub-core/lib/libgcrypt/cipher/sha512.c
+./grub-core/lib/libgcrypt/cipher/test-getrusage.c
 ./grub-core/lib/libgcrypt/cipher/tiger.c
 ./grub-core/lib/libgcrypt/cipher/twofish.c
 ./grub-core/lib/libgcrypt/cipher/whirlpool.c
+./grub-core/lib/libgcrypt/mpi/ec.c
+./grub-core/lib/libgcrypt/mpi/generic/mpi-asm-defs.h
+./grub-core/lib/libgcrypt/mpi/generic/mpih-add1.c
+./grub-core/lib/libgcrypt/mpi/generic/mpih-lshift.c
+./grub-core/lib/libgcrypt/mpi/generic/mpih-mul1.c
+./grub-core/lib/libgcrypt/mpi/generic/mpih-mul2.c
+./grub-core/lib/libgcrypt/mpi/generic/mpih-mul3.c
+./grub-core/lib/libgcrypt/mpi/generic/mpih-rshift.c
+./grub-core/lib/libgcrypt/mpi/generic/mpih-sub1.c
+./grub-core/lib/libgcrypt/mpi/generic/udiv-w-sdiv.c
+./grub-core/lib/libgcrypt/mpi/i386/syntax.h
+./grub-core/lib/libgcrypt/mpi/longlong.h
+./grub-core/lib/libgcrypt/mpi/m68k/syntax.h
+./grub-core/lib/libgcrypt/mpi/mips3/mpi-asm-defs.h
+./grub-core/lib/libgcrypt/mpi/mpi-add.c
+./grub-core/lib/libgcrypt/mpi/mpi-bit.c
+./grub-core/lib/libgcrypt/mpi/mpi-cmp.c
+./grub-core/lib/libgcrypt/mpi/mpicoder.c
+./grub-core/lib/libgcrypt/mpi/mpi-div.c
+./grub-core/lib/libgcrypt/mpi/mpi-gcd.c
+./grub-core/lib/libgcrypt/mpi/mpih-div.c
+./grub-core/lib/libgcrypt/mpi/mpih-mul.c
+./grub-core/lib/libgcrypt/mpi/mpi-inline.c
+./grub-core/lib/libgcrypt/mpi/mpi-inline.h
+./grub-core/lib/libgcrypt/mpi/mpi-internal.h
+./grub-core/lib/libgcrypt/mpi/mpi-inv.c
+./grub-core/lib/libgcrypt/mpi/mpi-mod.c
+./grub-core/lib/libgcrypt/mpi/mpi-mpow.c
+./grub-core/lib/libgcrypt/mpi/mpi-mul.c
+./grub-core/lib/libgcrypt/mpi/mpi-pow.c
+./grub-core/lib/libgcrypt/mpi/mpi-scan.c
+./grub-core/lib/libgcrypt/mpi/mpiutil.c
+./grub-core/lib/libgcrypt/mpi/powerpc32/syntax.h
+./grub-core/lib/libgcrypt/src/ath.c
+./grub-core/lib/libgcrypt/src/ath.h
+./grub-core/lib/libgcrypt/src/cipher.h
+./grub-core/lib/libgcrypt/src/cipher-proto.h
+./grub-core/lib/libgcrypt/src/dumpsexp.c
+./grub-core/lib/libgcrypt/src/fips.c
+./grub-core/lib/libgcrypt/src/g10lib.h
+./grub-core/lib/libgcrypt/src/gcrypt-module.h
+./grub-core/lib/libgcrypt/src/gcryptrnd.c
+./grub-core/lib/libgcrypt/src/getrandom.c
+./grub-core/lib/libgcrypt/src/global.c
+./grub-core/lib/libgcrypt/src/hmac256.c
+./grub-core/lib/libgcrypt/src/hmac256.h
+./grub-core/lib/libgcrypt/src/hwfeatures.c
+./grub-core/lib/libgcrypt/src/misc.c
+./grub-core/lib/libgcrypt/src/missing-string.c
+./grub-core/lib/libgcrypt/src/module.c
+./grub-core/lib/libgcrypt/src/mpi.h
+./grub-core/lib/libgcrypt/src/secmem.c
+./grub-core/lib/libgcrypt/src/secmem.h
+./grub-core/lib/libgcrypt/src/sexp.c
+./grub-core/lib/libgcrypt/src/stdmem.c
+./grub-core/lib/libgcrypt/src/stdmem.h
+./grub-core/lib/libgcrypt/src/types.h
+./grub-core/lib/libgcrypt/src/visibility.c
+./grub-core/lib/libgcrypt/src/visibility.h
 ./grub-core/lib/libgcrypt_wrap/cipher_wrap.h
+./grub-core/lib/libgcrypt_wrap/mem.c
 ./grub-core/lib/LzFind.c
 ./grub-core/lib/LzmaDec.c
 ./grub-core/lib/LzmaEnc.c
@@ -558,14 +628,17 @@
 ./grub-core/term/efi/serial.c
 ./grub-core/term/emu/console.c
 ./grub-core/term/gfxterm.c
+./grub-core/term/i386/coreboot/cbmemc.c
 ./grub-core/term/i386/pc/console.c
 ./grub-core/term/i386/pc/mda_text.c
 ./grub-core/term/i386/pc/vga_text.c
 ./grub-core/term/ieee1275/console.c
 ./grub-core/term/ieee1275/escc.c
 ./grub-core/term/ieee1275/serial.c
+./grub-core/term/morse.c
 ./grub-core/term/ns8250.c
 ./grub-core/term/serial.c
+./grub-core/term/spkmodem.c
 ./grub-core/term/terminfo.c
 ./grub-core/term/tparm.c
 ./grub-core/term/usb_keyboard.c
@@ -609,6 +682,7 @@
 ./include/grub/backtrace.h
 ./include/grub/bitmap.h
 ./include/grub/bitmap_scale.h
+./include/grub/boottime.h
 ./include/grub/bsdlabel.h
 ./include/grub/bufio.h
 ./include/grub/cache.h
@@ -658,6 +732,8 @@
 ./include/grub/font.h
 ./include/grub/fs.h
 ./include/grub/fshelp.h
+./include/grub/gcrypt/gpg-error.h
+./include/grub/gcry/types.h
 ./include/grub/gdb.h
 ./include/grub/gfxmenu_model.h
 ./include/grub/gfxmenu_view.h
@@ -829,6 +905,7 @@
 ./include/grub/powerpc/time.h
 ./include/grub/powerpc/types.h
 ./include/grub/priority_queue.h
+./include/grub/pubkey.h
 ./include/grub/reader.h
 ./include/grub/reed_solomon.h
 ./include/grub/relocator.h
@@ -847,6 +924,7 @@
 ./include/grub/sparc64/setjmp.h
 ./include/grub/sparc64/time.h
 ./include/grub/sparc64/types.h
+./include/grub/speaker.h
 ./include/grub/symbol.h
 ./include/grub/term.h
 ./include/grub/terminfo.h
@@ -933,3 +1011,4 @@
 ./util/misc.c
 ./util/raid.c
 ./util/resolve.c
+./util/spkmodem-recv.c
