--- a/grub-core/Makefile.core.def
+++ b/grub-core/Makefile.core.def
@@ -1068,6 +1068,11 @@ module = {
 };
 
 module = {
+  name = procfs;
+  common = fs/proc.c;
+};
+
+module = {
   name = affs;
   common = fs/affs.c;
 };
