--- a/util/grub-mknetdir.in
+++ b/util/grub-mknetdir.in
@@ -1,5 +1,3 @@
-#! /bin/sh
-
 # Install GRUB on your drive.
 # Copyright (C) 1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010  Free Software Foundation, Inc.
 #
@@ -26,7 +24,6 @@ PACKAGE_NAME=@PACKAGE_NAME@
 PACKAGE_TARNAME=@PACKAGE_TARNAME@
 PACKAGE_VERSION=@PACKAGE_VERSION@
 host_os=@host_os@
-pkglib_DATA="moddep.lst command.lst fs.lst partmap.lst parttool.lst handler.lst video.lst crypto.lst terminal.lst"
 datadir="@datadir@"
 if [ "x$pkgdatadir" = x ]; then
     pkgdatadir="${datadir}/@PACKAGE@"
@@ -65,6 +62,7 @@ usage () {
     print_option_help "-h, --help" "$(gettext "print this message and exit")"
     print_option_help "-v, --version" "$(gettext "print the version information and exit")"
     print_option_help "--modules=$(gettext "MODULES")" "$(gettext "pre-load specified modules MODULES")"
+    grub_print_install_files_help
     print_option_help "--net-directory=$(gettext "DIR")" "$(gettext "root directory of TFTP server")"
     print_option_help "--subdir=$(gettext "DIR")" "$(gettext "relative subdirectory on network server")"
     print_option_help "--grub-mkimage=$(gettext "FILE")" "$(gettext "use FILE as grub-mkimage")"
@@ -77,20 +75,15 @@ usage () {
     gettext "Report bugs to <bug-grub@gnu.org>."; echo
 }
 
-argument () {
-  opt=$1
-  shift
-
-  if test $# -eq 0; then
-      gettext_printf "%s: option requires an argument -- \`%s'\n" "$0" "$opt" 1>&2
-      exit 1
-  fi
-  echo $1
-}
-
 # Check the arguments.
 while test $# -gt 0
 do
+    grub_process_install_options "$@"
+    case "$grub_process_install_options_consumed" in
+	1) shift; continue;;
+	2) shift; shift; continue;;
+    esac
+
     option=$1
     shift
 
@@ -166,32 +159,10 @@ process_input_dir ()
     platform="$2"
     grubdir="${rootdir}/${subdir}/${platform}"
     config_opt=
-    mkdir -p "$grubdir" || exit 1
 
-    for file in "${grubdir}"/*.mod "${grubdir}"/*.lst "${grubdir}"/*.img "${grubdir}"/efiemu??.o; do
-	if test -f "$file" && [ "`basename $file`" != menu.lst ]; then
-	    rm -f "$file" || exit 1
-	fi
-    done
-    for file in "${input_dir}"/*.mod; do
-        if test -f "$file"; then
-            cp -f "$file" "$grubdir/"
-        fi
-    done
-    for file in ${pkglib_DATA}; do
-	if test -f "${input_dir}/${file}"; then
-            cp -f "${input_dir}/${file}" "$grubdir/"
-	fi
-    done
+    grub_install_files "${input_dir}" "${rootdir}/${subdir}" "${platform}"
 
-    mkdir -p "$grubdir/locale"
-    for file in ${input_dir}/po/*.mo; do
-        if test -f "$file"; then
-	    cp -f "$file" "$grubdir/locale/"
-	fi
-    done
-
-    rm -f ${grubdir}/load.cfg
+    rm -f "${grubdir}"/load.cfg
 
     if [ "x${debug_image}" != x ]; then
        echo "set debug='${debug_image}'" >> ${grubdir}/load.cfg
