Initial import of Leif's work [git importer: converted .bzrignore to .gitignore]

--- a/Makefile.util.def
+++ b/Makefile.util.def
@@ -150,6 +150,8 @@ program = {
   common = util/resolve.c;
   common = grub-core/kern/emu/argp_common.c;
 
+  arm = grub-core/kern/arm/dl.c;
+
   extra_dist = util/grub-mkimagexx.c;
 
   ldadd = libgrubmods.a;
@@ -470,6 +472,7 @@ script = {
   enable = mips_loongson;
   enable = ia64_efi;
   enable = powerpc_ieee1275;
+  enable = arm_uboot;
 };
 
 script = {
