--- a/.gitignore
+++ b/.gitignore
@@ -173,6 +173,8 @@ po/*.gmo
 po/LINGUAS
 include/grub/gcrypt/gcrypt.h
 include/grub/gcrypt/g10lib.h
+grub-core/lib/dtc-grub
+grub-core/Makefile.libfdt.def
 *.a
 *.o
 *.py[co]
