Support i386-ieee1275 grub-mkrescue and make check on it.

--- a/tests/grub_script_expansion.in
+++ b/tests/grub_script_expansion.in
@@ -35,7 +35,7 @@ done
 
 other=`echo insmod regexp\; echo '(*)' | @builddir@/grub-shell`
 for d in $disks; do
-    if ! echo "$other" | grep "$d" >/dev/null; then
+    if ! echo "$other" | grep -F "$d" >/dev/null; then
 	echo "$d missing from (*) expansion" >&2
 	exit 1
     fi
