--- a/Makefile.util.def
+++ b/Makefile.util.def
@@ -470,6 +470,7 @@ script = {
   enable = i386_qemu;
   enable = i386_multiboot;
   enable = i386_coreboot;
+  enable = i386_ieee1275;
   enable = mips_qemu_mips;
   enable = mips_loongson;
   enable = ia64_efi;
