--- a/util/grub-mkrescue.in
+++ b/util/grub-mkrescue.in
@@ -40,6 +40,7 @@ mipsel_qemu_dir="${libdir}/@PACKAGE@/mipsel-qemu_mips"
 loongson_dir="${libdir}/@PACKAGE@/mipsel-loongson"
 mips_qemu_dir="${libdir}/@PACKAGE@/mips-qemu_mips"
 pc_dir="${libdir}/@PACKAGE@/i386-pc"
+i386_ieee1275_dir="${libdir}/@PACKAGE@/i386-ieee1275"
 efi32_dir="${libdir}/@PACKAGE@/i386-efi"
 efi64_dir="${libdir}/@PACKAGE@/x86_64-efi"
 ia64_dir="${libdir}/@PACKAGE@/ia64-efi"
@@ -256,6 +257,9 @@ if [ "${override_dir}" = "" ] ; then
     if test -e "${pc_dir}" ; then
         process_input_dir "${pc_dir}" i386-pc
     fi
+    if test -e "${i386_ieee1275_dir}" ; then
+	process_input_dir "${i386_ieee1275_dir}" i386-ieee1275
+    fi
     if test -e "${efi32_dir}" ; then
         process_input_dir "${efi32_dir}" i386-efi
     fi
@@ -291,6 +295,7 @@ else
     mips_qemu_dir=
     loongson_dir=
     ppc_dir=
+    i386_ieee1275_dir=
     case "${grub_modinfo_target_cpu}-${grub_modinfo_platform}" in
         i386-multiboot) multiboot_dir="${override_dir}" ;;
         i386-coreboot) coreboot_dir="${override_dir}" ;;
@@ -303,6 +308,7 @@ else
 	mipsel-loongson) loongson_dir="${override_dir}" ;;
 	mips-qemu_mips) mips_qemu_dir="${override_dir}" ;;
 	powerpc-ieee1275) ppc_dir="${override_dir}" ;;
+	i386-ieee1275) i386_ieee1275_dir="${override_dir}" ;;
     esac
 fi
 
@@ -335,6 +341,8 @@ fi
 
 # build multiboot core.img
 make_image "${multiboot_dir}" i386-multiboot "${iso9660_dir}/boot/multiboot.img" "pata ahci at_keyboard"
+
+make_image "${i386_ieee1275_dir}" i386-ieee1275 "${iso9660_dir}/boot/ofwx86.elf" ""
 
 if test -e "${efi64_dir}" || test -e "${efi32_dir}" || test -e "${ia64_dir}"; then
     efi_dir=`mktemp -d "${TMPDIR:-/tmp}/tmp.XXXXXXXXXX"` || exit 1
