--- a/Makefile.util.def
+++ b/Makefile.util.def
@@ -676,6 +676,12 @@ script = {
 
 script = {
   testcase;
+  name = grub_cmd_date;
+  common = tests/grub_cmd_date.in;
+};
+
+script = {
+  testcase;
   name = grub_script_expansion;
   common = tests/grub_script_expansion.in;
 };
